--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dependencies = [
     "langgraph-sdk>=0.3.0",
     "langchain>=1.2.0",
     "deepl>=1.27.0",
+    "mcp>=1.26.0",
+    "starlette>=0.27.0",
+    "sse-starlette>=1.6.5",
 ]
 
 [dependency-groups]
